# redazione

./: .gitignore  Dockerfile  core.py  dev.db  flake.nix  main.py  pyproject.toml  requirements.txt  result
.github/workflows/: build.yml
app/: core.py  db.py  main.py  models.py  notify.py  prompts.py  schemas.py
app/constants/: emails.py  prompts.py
app/tests/: test_endpoints.py
