[tool.poetry]
name = "redazione"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.3"
secure-smtplib = "^0.1.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
run = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
